--- a/index.html
+++ b/index.html
@@ -1,45 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>Personal Webpage</title>
-    <style>
-        @import "personal.css";
-    </style>
-</head>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Stevenfluo.GitHub.io by stevenfluo</title>
 
-<body>
-    <div>
-    <h1> Steven Luo </h1>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Stevenfluo.GitHub.io</h1>
+        <p></p>
+
+
+        <p class="view"><a href="https://github.com/stevenfluo">View My GitHub Profile</a></p>
+
+      </header>
+      <section>
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/defunkt/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/defunkt">@defunkt</a>), PJ Hyett (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/pjhyett/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/pjhyett">@pjhyett</a>), and Tom Preston-Werner (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/mojombo/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/mojombo">@mojombo</a>) founded GitHub.</p>
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-
-    <img src="personalwebpagephoto.jpg" alt="Photo of the author"/>
-    <p> I am a rising junior at Evergreen Valley High School in San Jose, California.
-    This summer, I am taking classes at <span class="Stanford">Stanford</span> through
-    <span class="Stanford">Stanford</span>'s High School Summer College. </p>
-
-    <p>I participate in several different extracurriculars, including Model United Nations, Speech & Debate, music, and more.
-    Some of these have led me to events at <span class="Stanford">Stanford</span>, like SNFI's debate camp and the
-    <span class="Stanford">Stanford</span> Model UN Conference. One of the things I missed the most since everything shut down
-    is playing in my school's band. Below are some of my favorite performances:</p>
-    <ol>
-        <li><a href="https://youtu.be/ZHoeD5PV9m0">Be Thou My Vision</a>, Concert Band 2018
-        <li><a href="https://youtu.be/bOiet_CaNmY">Into the Storm</a>, Concert Band 2019
-        <li><a href="https://youtu.be/cejky93eiaQ">Divine Comedy (III. Ascension)</a>, Wind Ensemble 2019
-        <li><a href="https://youtu.be/GuI1rFq7RwA">Sleigh Ride</a>, Wind Ensemble 2019
-        <li><a href="https://youtu.be/JnUh66pkasM">Ignition</a>, Wind Ensemble 2020
-        <li><a href="https://youtu.be/Dgj1sNkUU6Y">Allerseelen</a>, Wind Ensemble 2020
-        <li><a href="https://youtu.be/oMaJhXZZMYY">Egyptian Legacy</a>, Symphony Orchestra 2020
-        <li><a href="https://youtu.be/F7mVnTufT0g">Children's March</a>, Wind Ensemble 2020
-    </ol>
-
-    <p> When I'm not in class or doing homework, I do things like: </p>
-    <ul>
-        <li><a href="https://www.nytimes.com">Read</a>
-        <li>Listen to <a href="https://www.youtube.com/watch?v=C889Xpv4GWQ">music</a>
-        <li>Practice flute/piano (sometimes piccolo)
-        <li><a href="https://evergreeninitiative.weebly.com">Manage a nonprofit</a> -- This is the fun one!
-        <li>Volunteer
-    </ul>
-</body>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
